retrieveUnpackaged/objects/Risk_Profile__c.object
<CustomObject>
    <description>Project 7</description>
    <fields>
        <fullName>Award__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Award</label>
        <referenceTo>Award__c</referenceTo>
        <relationshipLabel>Risk Profiles</relationshipLabel>
        <relationshipName>Risk_Profiles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Organization__c</fullName>
        <label>Organization</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Risk Profiles</relationshipLabel>
        <relationshipName>Risk_Profiles</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Red_Flag_Count__c</fullName>
        <formula>Organization__r.Red_Flag_Count__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Red Flag Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Red_Flags__c</fullName>
        <formula>IMAGE( IF(Red_Flag_Count__c &gt; 0, &quot;img/samples/flag_red.gif&quot;,&quot;img/samples/flag_green.gif&quot; ),&quot;&quot;, 20, 20 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Red Flags</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Risk_Score__c</fullName>
        <description>Need to update using a trigger - Roll up summary - Sum of Total Score on Risk Indicators</description>
        <label>Risk Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Risk_Status__c</fullName>
        <description>Need to put images based on Score</description>
        <formula>TEXT(Risk_Score__c  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Risk Status</label>
        <type>Text</type>
    </fields>
    <label>Risk Profile</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>RP-{0000000}</displayFormat>
        <label>Risk Profile Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Risk Profiles</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>